# CustomerSupport-Production

./: .env.example  .gitignore  TUTORIAL.md  docker-compose.yml
.github/workflows/: ci.yml
agentcore/: agentcore.json  aws-targets.json
agentcore/.cli/: deployed-state.json
app/CustomerSupport/: .dockerignore  main.py  pyproject.toml
app/CustomerSupport/frontend/: Dockerfile  config.py  frontend.py
app/CustomerSupport/frontend/templates/: index.html  login.html
app/CustomerSupport/mcp_client/: client.py
app/CustomerSupport/memory/: session.py
app/CustomerSupport/model/: load.py
infrastructure/lambda/process_refund/: handler.py
infrastructure/lambda/warranty_check/: README.md  handler.py
